@@ -1,0 +1,34 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:i18n="http://namespaces.zope.org/i18n"
+    xmlns:browser="http://namespaces.zope.org/browser"
+    i18n_domain="collective.simplemanagement">
+
+
+  <browser:page
+    for="*"
+    name="simpemanagement-ticketsmacros"
+    class=".macros.TicketsMacros"
+    layer="..interfaces.IBrowserLayer"
+    permission="zope2.View"
+  />
+
+  <browser:page
+    for="plone.app.layout.navigation.interfaces.INavigationRoot"
+    name="dashboard"
+    layer="..interfaces.IBrowserLayer"
+    permission="plone.app.portlets.ViewDashboard"
+    class=".dashboard.DashboardView"
+    template="templates/dashboard.pt"
+    />
+
+  <browser:page
+    for="..interfaces.IProject"
+    name="dashboard"
+    layer="..interfaces.IBrowserLayer"
+    permission="plone.app.portlets.ViewDashboard"
+    class=".dashboard.DashboardView"
+    template="templates/dashboard.pt"
+    />
+
+</configure>
