@@ -57,7 +57,7 @@
             <div tal:condition="past"
                  tal:repeat="iteration past">
               <metal:iteration
-                use-macro="context/simpemanagement-macros/iteration-compact" />
+                use-macro="context/project_macros/iteration-compact" />
             </div>
             <p class="discreet" tal:condition="not:past"
               i18n:translate="">
@@ -70,7 +70,7 @@
             <div tal:condition="current"
                  tal:repeat="iteration iterations/current">
               <metal:iteration
-                use-macro="context/simpemanagement-macros/iteration-compact" />
+                use-macro="context/project_macros/iteration-compact" />
             </div>
             <p class="discreet" tal:condition="not:iterations/current"
                i18n:translate="">
@@ -83,7 +83,7 @@
             <div tal:condition="future"
                  tal:repeat="iteration future">
               <metal:iteration
-                use-macro="context/simpemanagement-macros/iteration-compact" />
+                use-macro="context/project_macros/iteration-compact" />
             </div>
             <p class="discreet" tal:condition="not:future"
                i18n:translate="">
