@@ -1,14 +1,10 @@
 # pylint: disable=W0613
 from zope.interface import implements
 
-from z3c.form import form, field, button
-from plone.z3cform.layout import wrap_form
+from z3c.form import form, button
 
 from Products.CMFCore.utils import getToolByName
 
-from abstract.z3cform.usertokeninput.widget import UserTokenInputFieldWidget
-
-from ..interfaces import IStory
 from ..interfaces import IQuickForm
 from .. import messageFactory as _
 
@@ -69,15 +65,3 @@ class BaseQuickeEdit(form.EditForm):
         ptool = getToolByName(self.context, 'plone_utils')
         ptool.addPortalMessage(self.noChangesMessage)
         self.redirect()
-
-
-class StoryQuickeditForm(BaseQuickeEdit):
-    fields = field.Fields(IQuickForm) + field.Fields(IStory).select(
-        'text',
-        'estimate',
-        'assigned_to',
-        'epic')
-    fields['assigned_to'].widgetFactory = UserTokenInputFieldWidget
-
-
-StoryQuickedit = wrap_form(StoryQuickeditForm)
