@@ -1,0 +1,41 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:i18n="http://namespaces.zope.org/i18n"
+    xmlns:browser="http://namespaces.zope.org/browser"
+    i18n_domain="collective.simplemanagement">
+
+  <browser:page
+    for="..interfaces.IProject"
+    name="worklog"
+    class=".worklog.Worklog"
+    layer="..interfaces.IBrowserLayer"
+    permission="simplemanagement.ManageProject"
+    template="templates/worklog.pt"
+  />
+
+  <browser:page
+    for="plone.app.layout.navigation.interfaces.INavigationRoot"
+    name="worklog"
+    class=".worklog.Worklog"
+    layer="..interfaces.IBrowserLayer"
+    permission="simplemanagement.ManageProject"
+    template="templates/worklog.pt"
+  />
+
+  <browser:page
+    for="..interfaces.IProject"
+    name="worklog_backend"
+    class=".worklog.WorklogBackend"
+    layer="..interfaces.IBrowserLayer"
+    permission="simplemanagement.ManageProject"
+  />
+
+  <browser:page
+    for="plone.app.layout.navigation.interfaces.INavigationRoot"
+    name="worklog_backend"
+    class=".worklog.WorklogBackend"
+    layer="..interfaces.IBrowserLayer"
+    permission="simplemanagement.ManageProject"
+  />
+
+</configure>
