@@ -4,6 +4,9 @@ Changelog
 1.0 (unreleased)
 ----------------
 
+- Iteration view knockoutjs refactoring
+  [gborelli]
+
 - Remove grok dependency
   [gborelli]
 
